--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -115,7 +115,7 @@
   }
 
   body {
-    @apply bg-background-page text-text-body antialiased;
+    @apply bg-background-page text-text-body font-family-sans antialiased;
   }
 
   dialog:modal {
